deploy: 116b05e894bccd3ac6e44dfb270432255f66d5cd

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Latest Articles
 <a href=/posts/hello/>
 <div class=post-row>
 <time>Oct 11</time>
-<h3>Hello</h3>
+<h3>你好世界</h3>
 </div>
 </a>
 </div>
