--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -83,7 +83,7 @@ Test
 <a href=/zh-cn/p/test-chinese/>Chinese Test</a>
 </h2>
 <h3 class=article-subtitle>
-这是一个副标题
+这是一个副标题1
 </h3>
 </div>
 <footer class=article-time>
